[package]
name = "x11"
version = "2.18.1"
authors = [
    "daggerbot <daggerbot@gmail.com>",
    "Erle Pereira <erle@erlepereira.com>",
]
description = "X11 library bindings for Rust"
license = "CC0-1.0"
repository = "https://github.com/erlepereira/x11-rs.git"
build = "build.rs"
documentation = "https://docs.rs/x11"
workspace = ".."

[features]
dpms = []
glx = []
xcursor = []
xf86vmode = []
xft = []
xinerama = []
xinput = []
xlib = []
xlib_xcb = []
xmu = []
xrandr = []
xrecord = ["xtst"]
xrender = []
xshm = []
xss = []
xt = []
xtest = ["xtst"]
xtst = []
dox = []

[dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.3"
# using https://github.com/mahkoh/posix.rs instead posix = "0.0.2"
# need to adapt posix.rs for newest version of rustc
posix = {path = "./../../posix.rs"}

[build-dependencies]
pkg-config = "0.3.8"
